<resources>
    <string name="app_name">Poli_Poster</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="enter_phone_number">Enter_phone_number</string>
    <string name="enter_password">enter_password</string>
    <string name="forget_password">Forget password?</string>
    <string name="login">Login</string>
    <string name="reset_from_here">reset from here</string>
    <string name="password_icon">Password icon</string>
    <string name="phone_icon">Phone icon</string>
    <string name="GETOTP">GetOTP</string>
    <string name="submit">Submit</string>
    <string name="profile">profile</string>
    <string name="dashboard">dashboard</string>
    <string name="home">home</string>
    <string name="category">Category</string>
    <string name="files">files</string>
    <string name="another_icon_desc">another_icon_desc</string>
    <string name="Notification">notification</string>
</resources>