<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activity.Activity.Login_Activity"
    android:background="@android:color/white">

    <!-- ScrollView for all the content above the bottom view -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_view"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center_horizontal">

            <!-- Logo section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="16dp">
                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/app_logo" />
            </LinearLayout>

            <!-- Phone Number input section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:background="@drawable/textview_background"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="30dp"
                    android:padding="4dp"
                    android:src="@drawable/phone_icon"
                    android:contentDescription="@string/phone_icon" />
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/black" />
                <EditText
                    android:id="@+id/PhoneEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_phone_number"
                    android:inputType="number"
                    android:background="@null"
                    android:padding="15dp"
                    android:maxLength="10"
                    android:textSize="14sp" />
            </LinearLayout>

            <!-- Password input section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:background="@drawable/textview_background"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="30dp"
                    android:padding="4dp"
                    android:src="@drawable/password_icon"
                    android:contentDescription="@string/password_icon" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/black" />

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:background="@null"
                    android:paddingStart="15dp"
                    android:paddingEnd="45dp"
                    android:maxLength="10"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/togglePasswordVisibility"
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:src="@drawable/closecyes"
                    android:contentDescription="toggle_password_visibility"
                    android:layout_marginEnd="1dp"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>

            <!-- Reset Password and Create Account Links -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/reset_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/forget_password"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/create_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:text="Create an account"/>
            </LinearLayout>

            <!-- Login Button -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="32dp">
                <Button
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/login"
                    android:background="@drawable/buttion_background"
                    android:textColor="@android:color/white" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <!-- Bottom View -->
    <LinearLayout
        android:id="@+id/bottom_view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/app_background_color"
        android:gravity="center"
        android:orientation="horizontal">
    </LinearLayout>

</RelativeLayout>
