<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".Activity.Activity.Reset_Password_Activity"
        android:background="@android:color/white">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottom_view"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center_horizontal">

                <!-- Logo -->
                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="70dp"
                    android:src="@drawable/app_logo" />
                <!-- Placeholder Text -->
                <TextView
                    android:id="@+id/placeholder_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:text="Lorem ipsum is a dummy or placeholder text commonly used in graphic design, publishing, and web development to fill empty spaces in a layout."
                    android:textSize="14sp"
                    android:gravity="center"
                    android:lineSpacingExtra="4dp"
                    android:textColor="@android:color/black" />

                <!-- Phone Input -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:background="@drawable/textview_background"
                    android:layout_marginTop="26dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="8dp"
                        android:src="@drawable/phone_icon"
                        android:contentDescription="@string/phone_icon" />
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/black" />
                    <EditText
                        android:id="@+id/PhoneEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="Enter phone no."
                        android:background="@null"
                        android:padding="10dp"
                        android:maxLength="10"
                        android:inputType="number"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginTop="8dp">
                    <TextView
                        android:id="@+id/forgot_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/forget_password" />
                    <TextView
                        android:id="@+id/reset_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reset_from_here"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        android:layout_marginStart="4dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="32dp">
                    <Button
                        android:id="@+id/getotp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/GETOTP"
                        android:background="@drawable/buttion_background"
                        android:textColor="@android:color/white" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    <LinearLayout
        android:id="@+id/bottom_view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/app_background_color"
        android:gravity="center"
        android:orientation="horizontal">
    </LinearLayout>

</RelativeLayout>