<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Activity.Creat_An_Account">

    <!-- ScrollView for all the content above the bottom view -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="60dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/bottom_view"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center_horizontal">

            <!-- Logo section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="16dp">
                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/app_logo" />
            </LinearLayout>

            <!-- Phone Number input section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:background="@drawable/textview_background"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="30dp"
                    android:padding="4dp"
                    android:src="@drawable/phone_icon"
                    android:contentDescription="@string/phone_icon" />
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/black" />
                <EditText
                    android:id="@+id/PhoneEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_phone_number"
                    android:inputType="number"
                    android:background="@null"
                    android:padding="15dp"
                    android:maxLength="10"
                    android:textSize="14sp" />
            </LinearLayout>

            <!-- Password input section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:background="@drawable/textview_background"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="30dp"
                    android:padding="4dp"
                    android:src="@drawable/password_icon"
                    android:contentDescription="@string/password_icon" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/black" />

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:background="@null"
                    android:paddingStart="15dp"
                    android:paddingEnd="45dp"
                    android:maxLength="10"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/togglePasswordVisibility"
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:src="@drawable/closecyes"
                    android:contentDescription="toggle_password_visibility"
                    android:layout_marginEnd="1dp"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:background="@drawable/textview_background"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="30dp"
                    android:padding="4dp"
                    android:src="@drawable/men2"
                    android:contentDescription="@string/password_icon" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/black" />

                <EditText
                    android:id="@+id/FristNameEditText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="enter_your_frist_name"
                    android:inputType="textCapCharacters"
                    android:background="@null"
                    android:paddingStart="15dp"
                    android:paddingEnd="45dp"
                    android:maxLength="10"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:background="@drawable/textview_background"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="30dp"
                    android:padding="4dp"
                    android:src="@drawable/men2"
                    android:contentDescription="@string/password_icon" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/black" />

                <EditText
                    android:id="@+id/SecondNameEditText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="enter_your_second_name"
                    android:inputType="textCapCharacters"
                    android:background="@null"
                    android:paddingStart="15dp"
                    android:paddingEnd="45dp"
                    android:maxLength="10"
                    android:textSize="14sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="32dp">
                <Button
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Create account"
                    android:background="@drawable/buttion_background"
                    android:textColor="@android:color/white" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <!-- Bottom View -->
    <LinearLayout
        android:id="@+id/bottom_view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/app_background_color"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
